--- a/editorial.html
+++ b/editorial.html
@@ -76,20 +76,19 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
                <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody"><div id="articlepic" style=""><br>
-              </div>
-            <h4 id="articleTitle">Take a Stand for Merry Christmas</h4>
+  <img src="images/edithstranges.jpg" width="225" height="237" alt="Edith Stranges">              </div>
+            <h4 id="articleTitle">From the Editor</h4>
               <div id="authorname"><!--SECTION LEFT END--></div>
               
-              <p>Prophecies from the Old Testament were fulfilled in  Jesus&rsquo; life, death and resurrection. Nearly 300 predictions from hundreds of  years before his birth were acknowledged by rabbis as having been made in  reference to a coming to a coming deliverer they called the Messiah.</p>
-              <p>These predictions <strong>included Bethlehem as the place of his birth</strong> (Micah 5:2), that he  would be <strong>born of a virgin</strong> (Isaiah  7:14 in the Septuagint Greek translation c.a. 250 B.C..E.) and that the <strong>time of his birth</strong> would be just before  Israel lost their sovereign power as a nation (Genesis 49:10) - this took place  just after the beginning of the First Century C.E. when Archelaus took the  throne. This Christmas season receive the greatest gift that can ever be given.  Open your heart and let the One who was born in a stable in humility, died on a  cross in love, and rose from the dead in power, enter in!</p>
-              <p>Have you accepted the most precious gift  he has for you? You can right now.</p>
-              <p><strong>Decide what you will  do with&#8200;Jesus Christ...</strong></p>
-              <p>&bull; <strong>Accept  Him - </strong>I want to accept Christ&rsquo;s gift of eternal life, but I don&rsquo;t know how.</p>
-              <p>&bull; <strong>Rededicate  - </strong>I am saved, but I have not been living like it. I want to rededicate my  life to Christ.</p>
-              <p>&bull; <strong>Reject  Jesus - </strong>I accept my fate.</p>
-              <p>&bull; <strong>Wait  - </strong>I have more questions, Or e-mail us.</p>
-              <p><strong>Merry  Christmas and a Blessed New Year with the favor of God.</strong></p>
-              <p>Help  Preserve Our Tradition of Saying &ldquo;Merry Christmas.&rdquo; Visit us at  www.christiananswers.net/christmas/skeptic.html.              </p>
+              <p align="center" class="qa">Dear Brothers and Sisters in the Lord:</p>
+              <p>For the first time in 30 years we were  not able to deliver <b>The</b> <b>Love</b> <b>Express</b> on time due to the weather conditions. We have always  strived to get the papers to the churches and  businesses before the first Sunday of the next month. We are so sorry  some didn&rsquo;t get theirs on time, but they were delivered a bit later. Praise  God!</p>
+              <p>February was a harsh month where many of  our blessed distributors were either sick or stuck in their homes due to the  snow and ice. We appreciate our distributors and I do not want them in any  dangerous situations. Other distributors helped out with extra deliveries.  Praise God!</p>
+              <p>Brothers and Sisters, let us keep in  Prayer the many churches and businesses along the East Coast, especially Boston  so affected by the snow storms. God bless them and keep them and their families and homes safe and secure. Praise God!</p>
+              <p class="qa">Dear Pastors and members: </p>
+              <p>We know many  pastors chose to close their churches because of the snow and ice and to keep  their members safe. </p>
+              <p>It is also  important that members keep up with their tithes and offerings so that these churches will be opened and praising the Lord.</p>
+              <p>We must pray  and trust God for a &ldquo;miracle weather breakthrough.&rdquo; We now have to step out in  faith and press our way on to this breakthrough. Spring will soon be here!</p>
+              <p align="right"><b>Sister Edith</b>              </p>
               <div></div>
 </div>
           <div id="body_adspace"></div>
