--- a/events.html
+++ b/events.html
@@ -116,78 +116,59 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               <div class="bodytxt">
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/andrae-crouch-sm.jpg" alt="Andrae Crouch" width="67" height="75" /><br>
-    </div>
-                <h2>Andrae Crouch</h2>
-                <p>The singer/songwriter died at age 72 on  Jan. 8th, after suffering a heart attack. New Christ Memorial Church honored  Crouch with public memorial services referred to as &quot;a celebration of  <strong> </strong>...<a href="andrae-crouch.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/shirley-caesar-sm.png" alt="Shirley Caesar" width="73" height="75" /><br>
-    </div>
-                <h2>Benefit Concert</h2>
-                <p>Wheel Chair Chari&shy;ties &amp; Bethel Christian Learn&shy;ing Academy sponsor a Benefit Concert celebrating Black History Month in February with Pastor Shirley Caesar, Wess Morgan, and Valerie Boyd @ New <strong> </strong>...<a href="shirleyceaser.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/pastor-and-co-pastor-john-and-carolyn-jamison-gsw_dsc_0415-sm.jpg" width="83" height="75" alt="Pastor and Co-Pastor John and Carolyn Jamison"><br>
-    </div>
-                <h2>Fit for the Kingdom Conference </h2>
-                <p>This years theme was selected by our Pastor John Jamison as he went before the Lord in prayer concerning the conference &quot;The Holy Spirit&quot; revealed to him that the church must not keep starting ...<a href="fit-for-the-kingdom.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <br>
-    </div>
-                <h2>New York CityServe - CityFest </h2>
-                <p>We have been so encouraged by the many activities surrounding NY CityServe &amp; CityFest since the official launch of the campaign in September. Below are a few updates and prayer requests <strong> </strong>...<a href="new-york-cityserver-cityfest.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/jacob-burgei-sm.jpg" alt="" name="authorpic" width="71" height="75" id="authorpic2" /><br>
-    </div>
-                <h2>The Fuel Movement </h2>
-                <p>The Fuel Movement is growing and expanding in 2015 with The Fuel Training in two locations this year in New Jersey and in New York. The Fuel Leadership Trainings are open for all Youth Pastors,  <strong> </strong>...<a href="the-fuel-movement.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/robertstearns.jpg" alt="" name="authorpic" width="62" height="75" id="authorpic5" /><br>
-    </div>
-                <h2>Turning The Tide </h2>
-                <p>Turning the Tide Con&shy;ference, April 24th-25th, (Friday:6pm; Sa&shy;turday:8:30am). This youth and young adults conference is a gathering of hundreds of young people who are crying out for  <strong> </strong>...<a href="turning-the-tide-youth-young-adults-conference.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" height="75" alt="Charlotte Hall" /><br>
-    </div>
-                <h2>Silent No More! - Love, Love, Love!</h2>
-                <p>Hello Beloved! Love is in the air. Really??? &quot;What's love got to do with anything, you ask? My answer would be EVERYTHING! The love that we're going to think about now is not a feeling, it's a decision and  <strong> </strong>...<a href="focuson.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <br>
-    </div>
-                <h2><span class="qa">Annual Oasis Singles Valentine's</span></h2>
-                <p>The  biggest singles event of the year is our <strong>Annual Oasis Singles Valentine&rsquo;S Event</strong> coming up on<strong> Saturday, February 7th </strong>at <strong>6 pm</strong>. Our Valentine&rsquo;s events always  draw our lar&shy;gest crowds<strong> </strong>...<a href="cindygaldalruperto.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
                   <img src="images/donaldreid.jpg" alt="" width="57" height="75" /><br>
     </div>
-                <h2>February Tax Tips!</h2>
-                <p>A tax credit is a dollar-for-dollar reduction of taxes owed. Some credits are refundable-taxes could be reduced to the point that a taxpayer would receive a refund rather than owing any taxes. Taxpayers <strong> </strong>...<a href="donaldreid.html">Read More</a>
-                </p>
+                <h2>Last Minute Tax Help!</h2>
+                <p>Looking  for ways to avoid the last-minute rush in preparing your taxes? Then here are  the top Six Golden Rules to help you navigate this last minute journey<strong> </strong>...<a href="donaldreid.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <a href="../www.christianpost.com/default.htm" target="_blank"><img src="images/freedomthroughundergroundgospeljazz.jpg" alt="Christian Post" width="52" height="85"></a><br>
-</div>
-                <h2>Freedom Through  Underground <br>
-                  Gospel Jazz</h2>
-                <p><strong>Bethel Gospel Taber&shy;nacle Worship</strong> <strong>&amp;</strong> <strong>Fine Arts, Hope for Ex Offenders &amp; Relume Inc. </strong>present <strong>Freedom Through Underground Gospel Jazz</strong> featuring Grammy Award Winner <strong>Mark</strong><strong> </strong>...<a href="freedom-through-underground-gospel-jazz.html">Read More</a></p>
+                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="50" height="75" id="authorpic" /><br>
+    </div>
+                <h2>Probiotics - Q &amp; A</h2>
+                <p>Walk down the supermarket  aisle and you&rsquo;ll see a growing array of products infused with  probiotics. They all pro&shy;mise amazing benefits. How do you know which products  are effective? How much <strong> </strong>...<a href="elizabethmadison.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <br>
+    </div>
+                <h2>Oasis Singles All Day Conference </h2>
+                <p>You&rsquo;re  invited to join Christian singles of all ages, from all denominations and from  all walks of life from throughout the tri-state area for a life-changing  conference featuring teaching, worship and <strong> </strong>...<a href="cindygaldalruperto.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/pastor-matthew-singh-sm.jpg" alt="Pastor Matthew &amp; Ka&shy;thy Singh" width="73" height="75" /><br>
+    </div>
+                <h2>Principles For Lasting Change</h2>
+                <p>One of the  universal desires of human beings is  the desire to improve. It&rsquo;s universal. We all want to grow. We all want to get  better. We all want to improve. We all want to  make something better of our lives<strong> </strong>...<a href="matthew-singh-pinciples-for-lasting-change.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/bishop-curtis-h-douglas.jpg" alt="" name="authorpic" width="56" height="75" id="authorpic3" /><br>
+    </div>
+                <h2>Dabar Bethlehem Cathedral</h2>
+                <p><strong>Dabar Bethlehem Cathedral</strong> presents <strong>Holy Week Teach&shy;ings from the Table</strong>, <strong>March </strong><strong>29th-April 2nd  7:30pm</strong>; <strong>Good Friday, April 3rd 12pm</strong> with <strong>Rev. Leo Colon, </strong><strong>Rev. Andrea Heyward</strong><strong> </strong>...<a href="dabar-bethlehem-cathedral.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/mark-schultz.jpg" alt="" name="authorpic" width="75" height="75" id="authorpic4" /><br>
+    </div>
+                <h2>Mark Schultz Concert</h2>
+                <p>An Evening  with <strong>Mark Schultz in Concert, Thursday, April 30, 2015 7:00pm</strong> @ the <strong>Princeton High School Performing Arts  Center</strong>, 151 Moore Street, Prince&shy;ton, New Jer&shy;sey 08540<strong> </strong>...<a href="mark-schultz-concert.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/PastorJEMcCullough.jpg" alt="" name="authorpic" width="52" height="75" id="authorpic6" /><br>
+    </div>
+                <h2>Simply Sacred</h2>
+                <p>Announcing  the <strong>Con&shy;secration </strong>of the <strong>Rev. </strong><strong>Dr. Jacqueline E. McCullough</strong> to the <strong>Bi&shy;shop&shy;ric</strong>. <strong>Consecration  Service: Friday, August 14th, 7pm</strong> @ <strong>Agape  Family Worship Center,</strong> 501 E. <strong> </strong>...<a href="simply-sacred-mccullough.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/rose-and-pastor-stranges.jpg" width="66" height="75" alt="Pastor Stranges with Rose Lictro"><br>
+    </div>
+                <h2> Viewpoint:  	 March for Jesus!! </h2>
+                <p>Believers  can you ima&shy;gine a Worldwide March for Jesus. Coming together from every  nation, country, and across oceans, to march. Millions of believers carrying  banners, flags of their country, sing&shy;ing<strong> </strong>...<a href="roselictro.html">Read More</a>                </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/dr-michael-scales-and-dr-roy-s-kirton-img1464.jpg" width="158" height="75" alt="Nyack College Alumns"><br>
 </div>
                 <h2>Nyack College </h2>
                 <p><strong>Dr. Michael Scales</strong>,  President of <strong>Nyack College</strong>,  presented <strong>Dr. Roy S. Kirton</strong> with the <strong>2014 Alumnus of the Year Award</strong>, for  his service to society.&nbsp; Rev. Kirton is  the  <strong> </strong>...<a href="nyackcollege.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/pastor-matthew-singh-sm.jpg" alt="" width="87" height="75" /><br>
-</div>
-                <h2>Principles For Lasting Change</h2>
-                <p>One of the  universal desires of human beings is  the desire to improve. It&rsquo;s universal. We all want to grow. We all want to get  better. We all want to improve. We all want to  make something better of our lives<strong> </strong>...<a href="matthew-singh-pinciples-for-lasting-change.html">Read More</a></p>
+                
               </div>
             </div>
             <div class="divider"></div>
