--- a/features.htm
+++ b/features.htm
@@ -139,10 +139,10 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/rev-timothy-wright.jpg" alt="" width="81" height="75" />
-          </div>
-                <h2>The Power of Forgiveness</h2>
-                <p>There are  many people without whose help, support and guidance this book would never have  seen the light of day. First, I thank God  for giving my family and me the breath of life and strength so that we may  persevere      ...<a href="the-power-of-forgiveness.html">Read More</a>
+                  <img src="images/central-park.jpg" alt="" height="75" /></div>
+                <h2>Vision For New York City<br>
+                </h2>
+                <p>It started with one small group of Latino  leaders and a simple invitation. They were eager to have Luis Palau and his  team help lead an evangelistic effort reaching  the Tri-State area. Within a few more ...<a href="vision-for-new-york-city.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/t-d-jakes-jim-garlow.png" alt="" width="157" height="86" /><br>
@@ -151,14 +151,52 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <p>When Bishop Harry Jackson, chairman of the High Impact Leadership Coalition and se&shy;nior pastor of Hope Christian Church in Washington, D.C., first called up Bishop T.D. Jakes, one of America's favorite and most influential     ...<a href="racial-reconciliation-summit.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/pastor-lois-rochford2.jpg" alt="Lois Elaine Rochford" name="authorpic5" width="63" height="75" id="authorpic5" /><br>
+                  <img src="images/robertstearns.jpg" alt="" name="authorpic" width="62" height="75" id="authorpic2" /><br>
           </div>
-                <h2>Fasting and Intercession for 2015</h2>
-                <p>Who can find a virtuous woman? This question is a common biblical reference of the quest to identify a woman of godly character, nobility, grace and honor easily answered, by those who knew and loved Lady Lois Elaine      ...<a href="lois-elaine-rochford.html">Read More</a>
+                <h2>Turning The Tide </h2>
+                <p><strong>Turning the Tide Con&shy;ference, April 24th-25th,  (Friday:6pm; Sa&shy;turday:8:30am)</strong>. This youth and young adults  conference is a gathering of hundreds of young people who are crying out for  God to       ...<a href="turning-the-tide-youth-young-adults-conference.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison2.jpg" alt="Elizabeth Madison" name="authorpic" width="63" height="75" id="authorpic6" /><br>
+                  <img src="images/jacob-burgei.jpg" alt="" name="authorpic" width="125" height="75" id="authorpic3" /><br>
           </div>
+                <h2>The Fuel Movement<br>
+                </h2>
+                <p>The <strong>Fuel Movement</strong> is growing and expanding  in 2015 with The Fuel Training in two locations this year in New Jersey and in  New York. The Fuel Leadership Trainings are open for all Youth Pastors     ...<a href="the-fuel-movement.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/jinuthomas.jpg" alt="" name="authorpic7" width="95" height="75" id="authorpic7" /><br>
+          </div>
+                <h2>Collyde One Day</h2>
+                <p>A<b>re you a Leader? Do you consider yourself a  leader?</b> Now, I could sense, as we have asked this question  before in groups, that some of you, would immediately say &ldquo;No&rdquo;. If we probe further, you might, just like      ...<a href="collyde-one-day.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/carman.jpg" alt="Carman" height="75" /><br>
+          </div>
+                <h2>No Plan B Tour 2015 with Carman</h2>
+                <p><strong>No Plan B Tour 2015 with  Carman, Thurs&shy;day, March 26th, </strong><strong>7:00pm</strong> (Doors  open 6pm) who will be at the <strong>Village of Faith Church</strong>, 1070 Portion  Road, Farmingville, New      ...<a href="carman-no-plan-b-tour.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/dennis-and-jackie-bambino.jpg" alt="Dennis and Jackie Bambino" name="authorpic" width="58" height="75" id="authorpic8" /><br>
+          </div>
+                <h2>Living From The Inside<br>
+                </h2>
+                <p>The <strong>Church of Grace and Peace</strong> located at  1563 Old Freehold Road, Toms River, New Jersey  will be hosting a <strong>one </strong><strong>day conference</strong>, &ldquo;<strong>Living from the Inside Out</strong>&rdquo; with speakers <strong>Dennis &amp; Jackie Bambino</strong> on     ...<a href="living-from-the-inside.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/kenneth-and-gloria-copeland.png" alt="" name="authorpic9" width="99" height="75" id="authorpic9" /><br>
+          </div>
+                <h2>Living Victory</h2>
+                <p>Join <strong>Kenneth &amp;  Gloria Copeland</strong> of <strong>Kenneth Copeland  Ministries&nbsp; </strong>for our <strong>Living Victory New York Faith Encounter</strong> on <strong>Friday-Saturday, Septem&shy;ber 11th-12th</strong> @ the New York Marriott Marquis       ...<a href="living-victory-copeland.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+<img src="images/freedomthroughundergroundgospeljazz-sm.jpg" alt="Gospel Jazz" width="139" height="75"><br>
+          </div>
+                <h2> Underground Gospel Jazz</h2>
+                <p><strong>Bethel Gospel Taber&shy;nacle Worship</strong> <strong>&amp;</strong> <strong>Fine Arts, Hope for Ex Offenders &amp; Relume Inc. </strong>present <strong>Freedom Through Underground Gospel Jazz</strong> featuring Grammy Award Winner <strong>Mark </strong>...<a href="freedom-through-underground-gospel-jazz.html">Read More</a>
+<div id="articlepic">
+  <div class="photocredits2"> </div>
+                  <img src="images/elizabethmadison2.jpg" alt="Elizabeth Madison" name="authorpic" width="63" height="75" id="authorpic6" /><br>
+        </div>
                 <h2>6 Tips for Heart Health</h2>
                 <p>You only  have one heart. You have two lungs, two kidneys, and even a regenerative liver,  but only one heart. Though it is the most important organ in the body, we tend  to take it for granted until it stops working th     ...<a href="elizabethmadison.html">Read More</a>
                 <div id="articlepic">
@@ -166,19 +204,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   <img src="images/dimassalaberriosgreyheadshot.jpg" width="67" height="75" alt="Dimas Salaberrios"><br>
         </div>
                 <h2>Slow Down Pastors</h2>
-                <p>The demands on New York City Pastors are relentless. Manhattan is the most influential island in the world and in every survey the first or second most influential city (only second to London at      ...<a href="slow-down-pastors.html">Read More</a><div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="60" height="75" id="authorpic" /><br>
-          </div>
-                <h2>Preparing for the Return of Christ </h2>
-                <p>If we knew  that a thief would be coming to break into our home, we would develop the  discipline to lock all the doors and windows (especially when we&rsquo;re not sure of  the exact day). Similarly, we need to prepare      ...<a href="jimbiscardi.html">Read More</a>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/jack-redmond.jpg" alt="" name="authorpic" width="76" height="75" id="authorpic4" /><br>
-        </div>
-                <h2>Build Your Legacy Now</h2>
-                <p>Building  legacy is a pro&shy;cess. If you want your life to make a difference now and for  generations to come, the more you build now, the more people you will impact for decades to come!    ...<a href="buildyourlegacy.html">Read More</a></p>
-</div>
+                <p>The demands on New York City Pastors are relentless. Manhattan is the most influential island in the world and in every survey the first or second most influential city (only second to London at      ...<a href="slow-down-pastors.html">Read More</a></div>
             </div>
           <!--SECTION LEFT BEGIN-->
           <div id="section_left" style="float:left;"></div>
