--- a/the-fuel-movement.html
+++ b/the-fuel-movement.html
@@ -2,7 +2,7 @@
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Welcome to the Love Express</title>
+<title>The Fuel Movement</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -85,12 +85,9 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               
               <p>The <strong>Fuel Movement</strong> is growing and expanding  in 2015 with The Fuel Training in two locations this year in New Jersey and in  New York. The Fuel Leadership Trainings are open for all Youth Pastors, Senior  Pastors and Student Leaders across the Greater NY Region, and will be held on <strong>Saturday, February 21st</strong> in Paterson,  New Jersey from <strong>9am-2pm</strong> at <strong>Harvest Outreach Ministry</strong> and <strong>Saturday, May 2nd</strong> in Brooklyn, New York  from <strong>9am-2pm</strong> at <strong>Parkslope Christian Tabernacle</strong>.</p>
               <p>This is a great opportunity to learn,  grow and be empowered by some great voices to this generation; Guest Speakers <strong>Todd</strong> <strong>Crews</strong> from Brooklyn Tabernacle, <strong>Danny Sanabria</strong> from God Belongs in My City Movement, <strong>Jacob Burgei</strong> from The Fuel Movement and <strong>Alex McCormick</strong> from The Kingdom  Alliance. We had over 200 in attendance last year and it is a great way for us  to re-connect, celebrate and encourage other ministries in their growth and  build lasting relationship with leaders for the Kingdom. </p>
-              <p>Seats are limited at each location and  advanced registration is only $15 which includes all sessions and lunch as  well. You can purchase tickets online at www. fuelconf.com.</p>
+              <p>Seats are limited at each location and  advanced registration is only $15 which includes all sessions and lunch as  well. You can purchase tickets online at www.fuelconf.com.</p>
               <p align="center"><strong><u>Fuel Leadership Training Locations:</u></strong></p>
-              <p><strong>Saturday, Feb. 21, 2015</strong><br><strong>9am-2pm</strong><br>
-                Harvest Outreach Ministry<br>
-                204 21st Avenue<br>
-                Paterson, New Jersey 07501<br><strong>&nbsp;</strong><br><strong>Saturday, May 2, 2015</strong><br><strong>9am-2pm</strong><br>
+              <p><strong>Saturday, May 2, 2015</strong><br><strong>9am-2pm</strong><br>
                 Parkslope Christian Tab.<br>
                 98 5th Avenue<br>
                 Brooklyn, New York 11217 </p>
