--- a/upcomingevents.html
+++ b/upcomingevents.html
@@ -97,16 +97,31 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
   <div id="authorname">
     
       <!--SECTION LEFT END--></div>
-  <p align="center" class="qa"><strong><a name="a1"></a>Festival of Miracles</strong></p>
-  <p><span class="qa"><strong></strong></span><strong>Friday-Sunday, Feb. 13th-15th,  6pm</strong> with <strong>Pastor  Sam Onuoha</strong> @ <strong>MCI Auditorium</strong>,  1104 Pa&shy;ci&shy;fic Street, Brooklyn, NY 11238. For more information call 1-888  -401-0038; visit www.somin.org  </p>
-  <p align="center" class="qa"><strong><a name="a2"></a>Awakening the Giant</strong> </p>
-  <p><span class="qa"><strong></strong></span><strong>Jerusalem-A Church without Walls </strong>presents <strong>2015 Designed for Destiny</strong>; a night of  preaching &amp; teaching. Theme:Awa&shy;ken&shy;ing  the Giant within. <strong>Friday, March 13th  6:30pm</strong> with <strong>Pastor Paula White</strong>, <strong>Prophet Max&shy;well </strong><strong>Otu </strong>&amp; guest Psalmist <strong>Judith Ga&shy;yle </strong>@ 3710 Barnes Avenue,  Bronx, NY 10467. Free Ad&shy;mis&shy;sion. Special Re&shy;serva&shy;tions for Clergy; call  (347)974-0772. Vi&shy;sit: www.jerusalemacww.org  </p>
+  <p align="center" class="qa"><strong><a name="a1"></a>Awakening the Giant</strong></p>
+  <p><strong>Jerusalem-A Church without Walls </strong>presents <strong>2015 Designed for Destiny</strong>; a night of  preaching &amp; teaching. Theme:Awa&shy;ken&shy;ing  the Giant within. <strong>Friday, March 13th  6:30pm</strong> with <strong>Pastor Paula White</strong>, <strong>Prophet Max&shy;well </strong><strong>Otu </strong>&amp; guest Psalmist <strong>Judith Ga&shy;yle </strong>@ 3710 Barnes Avenue,  Bronx, NY 10467. Free Ad&shy;mis&shy;sion. Special Re&shy;serva&shy;tions for Clergy; call  (347)974-0772. Vi&shy;sit: www.jerusalemacww.org</p>
+  
+  
+  <p align="center" class="qa"><strong><a name="a2"></a>Passion 4 Worship</strong></p>
+  <p><strong>Bethel Gospel Tabernacle </strong>presents <strong>Igniting Passion 4 Worship Summit, (2nd  Annual Worship &amp; Fine Arts Ex&shy;pe&shy;ri&shy;ence) April 23-26, 2015</strong> with<strong> Dr. Lamar Boschman, J. Da&shy;vid Bratton,  Rev. Dana Po&shy;well, Dr. Bob Sorge, Dr. Mi&shy;chael Torres</strong> and <strong>Bishop Ro&shy;derick Caesar &amp; Pastor Be&shy;verly  Caesar</strong>, Summit Hosts. Venue: 110-25 Guy R. Brewer Blvd., Jamaica, NY 11434.  Call 718-291-2677;&nbsp; www.bgtfi.us.</p>
+  
+  
   <p align="center" class="qa"><strong><a name="a3"></a>Global Leadership</strong></p>
-  <p><span class="qa"><strong></strong></span><strong>Bishop T.D. Jakes</strong> presents <strong>Int&rsquo;l Pastors &amp; Lea&shy;dership  Conference 2015, April 30th-May 2nd; Passport to Global  Leadership</strong> with <strong>Bi&shy;shop T.D. Jakes,  John Max&shy;well, Rev. Samuel Rodriguez, Pastor Chris Hill</strong> &amp; <strong>Pastor Steven Furtick</strong>. Call  1-800-Bishop.2; PastorsandLeaders.org </p>
-  <p align="center" class="qa"><strong><a name="a4"></a>Church Anniversary</strong></p>
-  <p><span class="qa"><strong></strong></span><strong>Faith Worship Center</strong> - <strong>22nd Church Anniversary</strong>, <strong>Friday-Sunday, March 13th-15th,  7pm</strong> with <strong>Min. Andrea McKenzie</strong>, <strong>Min. Samuel Nathan</strong>, <strong>Prophe&shy;tess Shirley Nathan</strong> &amp; <strong>Bishop Leonard Nathan</strong> @ 2145 Pit&shy;kin  Avenue, Brooklyn, NY 11207. Call (718) 566-0701; www.faithworshipcenterinc.org  </p>
-  <p align="center" class="qa"><strong><a name="a5"></a>FGBMF Meeting</strong></p>
-  <p><span class="qa"><strong></strong></span><strong>Full Gospel Businessmen&rsquo;s </strong><strong>Fellowship</strong> meeting, <strong>Sat, Feb. 21st, 9:30am</strong> with <strong>Dil&shy;lon Bur&shy;gin</strong> on expanding  your business borders 2015. @ Zeytuna Market, 59 Maiden Lane, NYC. All trains  to Fulton Street. Call 347-432-8861/917-530- 6406.</p>
+  <p><strong>Bishop T.D. Jakes</strong> presents <strong>Int&rsquo;l Pastors &amp; Lea&shy;dership  Conference 2015, April 30th-May 2nd; Passport to Global  Leadership</strong> with <strong>Bi&shy;shop T.D. Jakes,  John Max&shy;well, Rev. Samuel Rodriguez, Pastor Chris Hill</strong> &amp; <strong>Pastor Steven Furtick</strong>. Call  1-800-Bishop.2; PastorsandLeaders.org. Also <strong>MegaFest 2015</strong>, <strong>August 19th-23rd</strong> with <strong>T.D. Jakes</strong>, <strong>Mrs. Se&shy;ri&shy;ta Jakes</strong>, <strong>Sarah Jakes</strong>, <strong>Joyce Meyer</strong>, <strong>Sheryl  Brady</strong> &amp; <strong>Pa&shy;trick </strong><strong>E. WInfield II</strong> in Dallas Texas. Call  1-800-974-9833 or visit mega-fest.com / megafest2015 </p>
+  
+  
+  <p align="center" class="qa"><strong><a name="a4"></a>Regional Renewal</strong></p>
+  <p><strong>Paulette Polo / Mantle of Po&shy;wer</strong> <strong>Ministries </strong>presents <strong>Re&shy;gional Renewal, Sat, Mar.</strong> <strong>7th, 7pm</strong> with <strong>Katie</strong> <strong>Souza</strong>. (<strong>9am Students &amp;  Part&shy;ners</strong>) @ <strong>Har&shy;vest Training Center</strong>,  69 Myr&shy;tle Avenue, Cranford, New Jer&shy;sey. For  more information call 732-283-5440.</p>
+  
+  
+  <p align="center" class="qa"><strong><a name="a5"></a>Youth Gathering</strong></p>
+  <p><strong>Youth Gathering</strong> with <strong>An&shy;drew Palau, Danny Sa&shy;na&shy;bria, Chris Durso</strong> &amp; <strong>Je&shy;sus Culture, March </strong><strong>13th-15th; Fri, Mar.  13th, 8pm</strong> in Queens - <strong>Christ  Taberna&shy;cle Glen&shy;dale Campus,</strong> 64-34 Myr&shy;tle Avenue, Glendale, NY; <strong>Sat,</strong> <strong>Mar. 14th, 7pm - Man&shy;hat&shy;tan-Sal&shy;va&shy;tion Army</strong>, 120 West  14th Street, NYC; <strong>Sun, Mar.  15th, 7pm, - Hawthorne Gospel Church</strong>, 2000 Route 208, Hawthorne, New Jersey  07506. <strong>Free Admission!</strong> For more info  visit nycityfest.org/youth</p>
+  
+  
+  
+  <p align="center" class="qa"><strong>Emotionally Healthy</strong></p>
+  <p><strong>Emotionally Healthy Leader&shy;ship</strong> with <strong>Pete Scazzero</strong> - New York Leadership  Fellowship on <strong>Thursday, March 12th,  1pm-3pm</strong> @ <strong>New York Leadership Center</strong>,  7 West 55th Street, NY, NY 10019. Contact Ann Cutino at (347)  382-9237; For more information please visit us at www.emotionallyhealthy.org</p>
+  
+
 </div>
             <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
