April 2015 Ads Update

--- a/ads/world-healing-international-ministry.html
+++ b/ads/world-healing-international-ministry.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-bethel-gospel-tabernaclea.jpg" width="1000" height="646" alt="Belthel Gospel and Vickie Wians" /><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><img src="1x13-world-healing-international-ministry.jpg" width="1000" height="1300" alt="World Healing International Ministry" /><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
