--- a/ads/blueboxentertainment.html
+++ b/ads/blueboxentertainment.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-bethel-gospel-tabernaclea.jpg" width="1000" height="646" alt="Belthel Gospel and Vickie Wians" /><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-bbe-blue-box-entertainment-tyrone-holmes.jpg" width="1000" height="646" alt="Blue Box Entertainment" /><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
