--- a/ads/christian-heritage-academy.htm
+++ b/ads/christian-heritage-academy.htm
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-bethel-gospel-tabernaclea.jpg" width="1000" height="646" alt="Belthel Gospel and Vickie Wians" /><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-christian-heritage-academy.jpg" width="1000" height="645" alt="Christian Heritage Academy" /><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
