--- a/ads/eddy-farms.html
+++ b/ads/eddy-farms.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-bethel-gospel-tabernaclea.jpg" width="1000" height="646" alt="Belthel Gospel and Vickie Wians" /><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><em><img src="1-eddy-farm-2-c.jpg" width="1000" height="1300" alt="Eddy Farms Family Conference Retreate and Getaway" /></em><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
