--- a/ads/mensdiscipleshipnetworkad.html
+++ b/ads/mensdiscipleshipnetworkad.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-bethel-gospel-tabernaclea.jpg" width="1000" height="646" alt="Belthel Gospel and Vickie Wians" /><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><img src="mens-dicipleship-network.jpg" width="1000" height="1300" alt="Men's Dicipleship Network Ad" /><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
