--- a/ads/true-worship-church.html
+++ b/ads/true-worship-church.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-bethel-gospel-tabernaclea.jpg" width="1000" height="646" alt="Belthel Gospel and Vickie Wians" /><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><img src="1x2-true-worship-church - Copy.jpg" width="1000" height="645" alt="True Worship Church" /><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
